# carrot-market-backend

./: README.md  pyproject.toml
categories/: admin.py  models.py
categories/migrations/: 0001_initial.py
communities/: admin.py  models.py
communities/migrations/: 0001_initial.py  0002_alter_answer_community_alter_answer_user_and_more.py
config/: settings.py  urls.py
products/: admin.py  models.py  serializers.py  views.py
products/migrations/: 0001_initial.py  0002_alter_product_latitude_alter_product_longitude.py  0003_product_category.py  0004_product_user.py  0005_alter_product_user.py  0006_alter_product_category_alter_product_user.py
records/: admin.py  models.py
records/migrations/: 0001_initial.py  0002_alter_record_product_alter_record_user.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_created_by_user_and_more.py
streams/: admin.py  models.py
streams/migrations/: 0001_initial.py  0002_alter_message_stream_alter_message_user_and_more.py
users/: admin.py  models.py  serializers.py
users/migrations/: 0001_initial.py  0002_user_avatar_user_name_user_phone_alter_user_email.py  0003_user_gender.py  0004_user_nickname.py
wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/migrations/: 0001_initial.py
