[tool.poetry]
name = "carrot-market-backend"
version = "0.1.0"
description = ""
authors = ["CHOI HYUNWOO <kr.choi.hyunwoo@gmail.com>"]
readme = "README.md"
packages = [{include = "carrot_market_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.3"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
